<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivCoins"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/coins"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTotalCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Total Coins : "
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/ivCoins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTotalCoinsNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/ivCoins"
        app:layout_constraintStart_toEndOf="@+id/tvTotalCoins"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalCoins"/>

    <TextView
        android:id="@+id/tvConsumable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/consumable"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalCoins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/llBuyCoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvConsumable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBuyCoin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/get_coin"/>

        <TextView
            android:id="@+id/tvBuyCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/buy_coin"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNonConsumable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/non_consumable"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/llBuyCoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/llUnlockRing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvNonConsumable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llUnlockNecklace"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivUnlockRing"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ring"/>

        <TextView
            android:id="@+id/tvUnlockRing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock_ring"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tvRingBought"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bought"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUnlockNecklace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvNonConsumable"
        app:layout_constraintStart_toEndOf="@+id/llUnlockRing"
        app:layout_constraintEnd_toStartOf="@+id/llUnlockCrown"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivUnlockNecklace"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/necklace"/>

        <TextView
            android:id="@+id/tvUnlockNecklace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock_necklace"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tvNecklaceBought"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bought"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUnlockCrown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvNonConsumable"
        app:layout_constraintStart_toEndOf="@+id/llUnlockNecklace"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivUnlockCrown"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/crown"/>

        <TextView
            android:id="@+id/tvUnlockCrown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock_crown"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tvCrownBought"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bought"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>